--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name" translatable="false">Music albums</string>
     <string name="search_hint">Search album</string>
+    <string name="action_settings">Settings</string>
+    <string name="no_result">No result</string>
+    <string name="no_internet_connection">Internet is not available.\nFor the application is required access to network</string>
+    <string name="wrong_res">Something went wrong.\nPlease, try again</string>
+    <string name="start_hint">Use search, to start</string>
+    <string name="settings">Settings</string>
 </resources>
